fix min height on safari

--- a/src/internal/exploring/exploring.css
+++ b/src/internal/exploring/exploring.css
@@ -38,11 +38,12 @@ body {
 main {
   flex-grow: 1;
   display: flex;
+  flex-direction: column;
 }
 
 main > * {
-  min-height: 100%;
   min-width: 100%;
+  flex: 1;
 }
 
 main > iframe {
